# clipygo

./: .gitignore  FEATURE.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  plugins.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  debug.json  desktop.json  exec-picker.json  history.json  morph-picker.json  morph.json  notification.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: exec.rs  history.rs  history_commands.rs  lib.rs  main.rs  morph.rs  settings.rs  targets.rs  trayicon.rs
src-tauri/src/target_providers/: subprocess.rs
src/routes/about/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/exec-picker/: +page.svelte
src/routes/history/: +page.svelte
src/routes/main/: +page.svelte
src/routes/morph/: +page.svelte
src/routes/morph-picker/: +page.svelte
src/routes/notification/: +page.svelte
src/routes/settings/: +page.svelte
