[package]
name = "clipygo"
version = "0.0.0-dev"
description = "Clipboard-to-X"
authors = ["Georg Nelles"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipygo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-store = "~2.4"
regex = "1.11.1"
tmuntaner-keyring = "0.1.0-alpha.15"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json"] }
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

